# CipherCampus

./: README.md  student_0.txt  student_1.txt  student_2.txt  student_3.txt
backend/: backend.py  generate_key_pair.py  generate_proof.py  requirements.txt  signature_check.py  trees.py  verify_proof.py  verify_test.py
backend/VKs/: vk_no_grade_no_major  vk_no_grade_yes_major  vk_yes_grade_no_major  vk_yes_grade_yes_major
contracts/school/: school.sol
frontend/school/school-frontend/: package-lock.json  package.json
frontend/server/: package-lock.json  package.json  private-key.pem  server.js  sign-message.js  sign.js  verify.js
frontend/student/student-frontend/: package-lock.json  package.json  vite.config.js
zero_knowledge/: README.md  build_full_merkle_tree.ts  compute_merkle_root.ts  compute_proof.ts  contract_info.txt  courses_assigned.csv  generateProverToml.js  modify_courses.py  package-lock.json  package.json
zero_knowledge/circuits/verifyNoGradeNoMajor/: Nargo.toml  Prover.toml  generate_proof.py
zero_knowledge/key_generation/: Cargo.toml  key_pairs.json
zero_knowledge/tree_creation/: add_majors.py  build_full_merkle_tree.ts  compute_proof.ts  compute_root_from_json.ts  courses.csv  courses_assigned.csv  generate_key_pair.py  modify_courses.py  package-lock.json  package.json  parse_pks.py  parsed_keys.json  private_keys.pem  public_keys.txt
zero_knowledge/verifyWithGrade/: Nargo.toml  Prover.toml
zero_knowledge/verifyWithoutGrade/: Nargo.toml
zero_knowledge/zk-test/: generateProof.js  index.html  package-lock.json  package.json
(+33 files in other folders)
